# image-diff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: compare.rs  dir.rs  main.rs  terminal.rs
