[package]
name = "image-diff"
version = "0.1.0"
edition = "2021"
authors = ["Batman"]
description = "Visual Difference Detection CLI for Images"

[dependencies]
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
walkdir = "2.5.0"
anyhow = "1.0.82"
colored = "2.1.0"
indicatif = "0.17.8"
terminal_size = "0.3.0"
pathdiff = "0.2.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
image-compare = "0.5.0"
