[package]
name = "image-diff"
version = "0.1.0"
edition = "2021"
authors = ["Aftaab Siddiqui <aftaab@aftaab.xyz>"]
description = "Visual Difference Detection CLI for Images"
license = "MIT"
repository = "https://github.com/cachevector/image-diff"
homepage = "https://github.com/cachevector/image-diff"

[dependencies]
image = "0.24.9"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
walkdir = "2.5.0"
anyhow = "1.0.82"
colored = "2.1.0"
indicatif = "0.17.8"
terminal_size = "0.3.0"
pathdiff = "0.2.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
image-compare = "0.5.0"
dialoguer = "0.11.0"
viuer = "0.11.0"
delta_e = "0.2.1"
lab = "0.7.2"

[dev-dependencies]
tempfile = "3.10.1"

[package.metadata.deb]
maintainer = "Aftaab Siddiqui <aftaab@aftaab.xyz>"
copyright = "2026, Aftaab Siddiqui"
license-file = ["LICENSE", "0"]
extended-description = """
A high-performance CLI tool for visual image comparison with SSIM, 
CIEDE2000, and terminal previews.
"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/image-diff", "/usr/bin/image-diff", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/image-diff", dest = "/usr/bin/image-diff", mode = "755" }
]

[package.metadata.generate-rpm.cargo]
buildflags = ["--release"]
